# VFund

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CASE_STUDY.md  CRYPTO_ALPHA_STUDY.md  EXAMPLES.md  OVERVIEW.md  RUST.md
docs/notebooks/: quickstart.ipynb
examples/: account_100k.py  account_sim.py  bench_sim.py  build_edge.py  capacity.py  capacity_curve.py  carry_liquidation.py  compare_strategies.py  crypto_alpha_study.py  diversified.py  edge_stats.py  four_sleeve.py  full_book.py  funding_carry_basis.py  funding_carry_major.py  funding_carry_study.py  hypothesis_gauntlet.py  largecap_search.py  maker_reversal.py  microstructure_adverse_selection.py  onchain_fees.py  onchain_tvl.py  oos_gauntlet.py  progression.py  robustness_carry.py  robustness_combined.py  stablecoin_macro.py  survivorship_check.py  trend_cycle.py  two_engine.py
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
scripts/: install_task.ps1  update_paper.ps1
tests/: test_carry.py  test_construct.py  test_cross_sectional.py  test_data.py  test_edge.py  test_engine.py  test_factors.py  test_funding.py  test_hardening.py  test_health.py  test_hypotheses.py  test_live.py  test_lookahead.py  test_microstructure.py  test_onchain.py  test_parity.py  test_performance.py  test_research.py  test_robustness.py  test_sim.py  test_survivorship.py
vfund/: __init__.py  cli.py
vfund/analytics/: __init__.py  performance.py  plot.py
vfund/backtest/: __init__.py  _accel.py  broker.py  construct.py  cross_sectional.py  engine.py  portfolio.py  result.py  sim.py
vfund/data/: __init__.py  ingest.py  intervals.py  models.py  onchain.py  panel.py  storage.py  synthetic.py  universe.py
vfund/factors/: __init__.py  alpha.py  bench.py  operators.py  purity.py  zoo.py
vfund/live/: __init__.py  carry.py  health.py  paper.py  signal.py
vfund/microstructure/: __init__.py  orderbook.py  simulator.py
vfund/research/: __init__.py  robustness.py  splits.py  (+1 more)
(+5 files in other folders)
