[package]
name = "vfund_core"
version = "0.1.0"
edition = "2021"
description = "Native hot-path core for VFund's cross-sectional backtester"
license = "MIT"

[lib]
name = "vfund_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

[profile.release]
lto = true
codegen-units = 1
