[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "vfund_core"
version = "0.1.0"
description = "Native hot-path core for VFund"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Rust"]

[tool.maturin]
# Pure Rust extension module; the Python package lives one level up in ../vfund.
